@@ -27,7 +27,9 @@ class ezcPersistentSessionInstanceTest extends ezcTestCase
         catch ( Exception $e )
         {
             $this->markTestSkipped( 'There was no database configured' );
+            return;
         }
+        ezcPersistentSessionInstance::reset();
     }
 
     public function testWithoutIdentifierInvalid()
@@ -92,6 +94,63 @@ class ezcPersistentSessionInstanceTest extends ezcTestCase
         try
         {
             ezcPersistentSessionInstance::get( "NoSuchInstance" );
+            $this->fail( "Getting a non existent instance did not fail." );
+        }
+        catch ( ezcPersistentSessionNotFoundException $e ) {}
+    }
+
+    public function testResetWithoutIdentifier()
+    {
+        $manager = new ezcPersistentCodeManager( dirname( __FILE__ ) . "/PersistentObject/tests/data/" );
+        $session = new ezcPersistentSession( ezcDbInstance::get(), $manager );
+
+        ezcPersistentSessionInstance::set( $session );
+
+        $this->assertSame(
+            $session,
+            ezcPersistentSessionInstance::get()
+        );
+
+        ezcPersistentSessionInstance::reset();
+
+        try
+        {
+            ezcPersistentSessionInstance::get();
+            $this->fail( "Getting a non existent instance did not fail." );
+        }
+        catch ( ezcPersistentSessionNotFoundException $e ) {}
+    }
+
+    public function testResetWithIdentifiers()
+    {
+        $manager = new ezcPersistentCodeManager( dirname( __FILE__ ) . "/PersistentObject/tests/data/" );
+        $session1 = new ezcPersistentSession( ezcDbInstance::get(), $manager );
+        $session2 = new ezcPersistentSession( ezcDbInstance::get(), $manager );
+
+        ezcPersistentSessionInstance::set( $session1, 'first' );
+        ezcPersistentSessionInstance::set( $session2, 'secondary' );
+
+        $this->assertSame(
+            $session1,
+            ezcPersistentSessionInstance::get( 'first' )
+        );
+        $this->assertSame(
+            $session2,
+            ezcPersistentSessionInstance::get( 'secondary' )
+        );
+
+        ezcPersistentSessionInstance::reset();
+
+        try
+        {
+            ezcPersistentSessionInstance::get( 'first' );
+            $this->fail( "Getting a non existent instance did not fail." );
+        }
+        catch ( ezcPersistentSessionNotFoundException $e ) {}
+
+        try
+        {
+            ezcPersistentSessionInstance::get( 'secondary' );
             $this->fail( "Getting a non existent instance did not fail." );
         }
         catch ( ezcPersistentSessionNotFoundException $e ) {}
